--- a/main.css
+++ b/main.css
@@ -2547,6 +2547,9 @@ input::-webkit-inner-spin-button {
     background-image: url(images/oxford-320.png);
     min-height: 210px;
   }
+  .banner__container {
+    position: relative;
+  }
   .banner__title {
     font-size: 24px;
     font-style: normal;
